# Diff13

./: .gitignore  .gitmodules  README.md  setVars.sh  setup.sh
CMSSW/: setup.sh  setupCMSSW.sh
CMSSW/UserCode/BtagUncertainties/plugins/: BtagUncertainty.cc  BuildFile.xml
CMSSW/UserCode/EventInfoCollector/plugins/: BuildFile.xml  EventInfoCollector.cc
CMSSW/UserCode/Isolation/plugins/: PFWeightedLeptonIsoProducer.cc  PUPPILeptonIsoProducer.cc
CMSSW/UserCode/JetCorrectionFactorProducer/: BuildFile.xml
CMSSW/UserCode/JetCorrectionFactorProducer/interface/: JetCorrectionLevel.h
CMSSW/UserCode/JetCorrectionFactorProducer/plugins/: JetCorrectionFactorProducer.cpp
CMSSW/UserCode/JetCorrectionFactorProducer/src/: JetCorrectionLevel.cc  classes.h  classes_def.xml
CMSSW/UserCode/JetResolutionSmearer/plugins/: BuildFile.xml  JetResolutionSmearer.cpp  SmearedJetProducer.cc
CMSSW/UserCode/JetUncertainties/plugins/: BuildFile.xml  JESUncertainty.cc
CMSSW/UserCode/MetT1Producer/plugins/: BuildFile.xml  MetT1Producer.cpp
CMSSW/UserCode/UnclusteredMET/plugins/: BuildFile.xml  UnclusteredEnergyShifter.cpp
CMSSW/crab/: getPU.sh  lumioverlap.py  main.py  runlumilist.py
PXL/: setVars.sh  setupPXL.sh  setupSWIG.sh
PxlModules/: CMakeLists.txt  FindPXL.cmake  FindROOT.cmake
PxlModules/internal/: CMakeLists.txt
PxlModules/internal/TMVA/: CMakeLists.txt
PxlModules/internal/TMVA/inc/TMVA/: MethodBDT.h
PxlModules/internal/TMVA/src/: KDEKernel.cxx  MethodBDT.cxx  PDEFoam.cxx~
PxlModules/internal/vdt/: CMakeLists.txt
PxlModules/internal/vdt/lib/: CMakeLists.txt
PxlModules/internal/vdt/src/: CMakeLists.txt  vdtMath_signatures.cc
PxlModules/reconstruction/: CMakeLists.txt  Chi2TopSolver.cpp  EventShapeVariables.cpp  EventShapeVariables.hpp  EventVariables.cpp  FoxWolfram.hpp  NeutrinoPz.cpp  NeutrinoPzSolver.hpp  TopReconstruction.cpp  hmc.hpp
PxlModules/scripts/: TMVATraining.py
PxlModules/selection/: BJetTagSelection.cpp  BTagSelection.cpp  CMakeLists.txt  ElectronSelection.cpp  ElectronVeto.cpp  JetSelection.cpp  MuonSelection.cpp  MuonVeto.cpp  TriggerSelection.cpp  muonisolation.h
PxlModules/systematics/: BTagCalibrationStandalone.cpp  BTagReweighting.cpp  BTagWeightCalculator.hpp  CMakeLists.txt  JetMETVariations.cpp  MuonSF.cpp  TopPtReweighting.cpp  test.cpp
PxlModules/utils/: CMakeLists.txt  CandidateFractions.cpp  EventWeight.cpp  IsrTagging.cpp  LumiMask.cpp  OutputStore.cpp  OutputStore.hpp  PileUpReweighting.cpp  PxlParser.hpp  RootTree.cpp  RootTree.hpp  RootTreeWriter.cpp  Splitter.cpp  TMVAEvaluation.cpp  TMVATraining.cpp  Variable.hpp
analysis/: constructUnfoldingVars.py.sample  countEventWeight.py  countPUInteractions.py  deltaPhiEta.py.sample  fitAndUnfold.py.sample  generateFitModel.py.sample  getEventWeightFromInfo.py.sample  getPUHistFromInfo.py.sample  plotBtagEff.py.sample  plotROC.py.sample  plotting.py  plotting.py.sample  scanPU.py.sample  sumEventWeight.py
analysis/unfolding/: checkPrefitDist.py  checkPrefitYields.py  driver.py  finalPlot.py  makeDAGcondor.py  makeYieldTable.py  readFitResult.py  recoPlots.py
analysis/unfolding/defaultModules/: Cache.py  Drawing.py  Files.py  HistogramCreator.py  HistogramsForFitting.py  Module.py  Program.py  ResponseMatrix.py  ResponseMatrixPt.py  ResponseMatrixY.py  Samples.py  ThetaFit.py  ThetaModel.py  Unfolding.py  UnfoldingSetup.py  Utils.py  __init__.py
analysis/unfolding/plugins/: AMC5FS.py  BadBinning.py  BiasAndPull.py  DYDown.py  DYUp.py  EnDown.py  EnUp.py  FindBinningEta.py  FindBinningPt.py  Fit2j0t.py  Fit2j0t_AMC.py  Fit2j0t_MG.py  FitOnly.py  Herwig.py  NoBB.py  NoPseudo.py  NoTopPt.py  Powheg.py  ResDown.py  ResUp.py  TWDown.py  TWUp.py  TopMassDown.py  TopMassUp.py  UnclEnDown.py  UnclEnUp.py  YieldDown.py  YieldUp.py  btagDown.py  btagUp.py  btagging_up.py  isoDown.py  isoUp.py  localFiles.py  ltagDown.py  ltagUp.py  muonDown.py  muonUp.py  pdfDown.py  pdfUp.py  (+10 more)
scripts/: pxlmultirun.py
scripts/PyTool/: CMakeLists.txt  FindROOT.cmake  LinkDef.h  Projector1D.cpp  Projector1D.hpp  Projector2D.cpp  Projector2D.hpp  PyFit.cpp  PyFit.hpp  PyUnfold.cpp  PyUnfold.hpp  PyUtils.cpp  PyUtils.hpp  printversion.cpp  pyTool.py  test.py  testPyFit.py  testPyUnfold.py
scripts/PyUnfold/: CMakeLists.txt  LinkDef.h  PyUnfold.cpp  PyUnfold.hpp  test.py
